# karasalamatt

./: README.md  docker-compose.yml
KaraSalamFront/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
KaraSalamFront/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
KaraSalamFront/src/app/admin/hse-data/: page.tsx
KaraSalamFront/src/app/admin/supervisors/: error.tsx  loading.tsx  page.tsx
KaraSalamFront/src/app/dashboard/: error.tsx  loading.tsx  page.tsx
KaraSalamFront/src/app/dashboard/hse-data/: page.tsx
KaraSalamFront/src/app/verify-otp/: VerifyOtpClient.tsx  page.tsx
KaraSalamFront/src/components/: Button.tsx  Card.tsx  EmptyState.tsx  ErrorMessage.tsx  Input.tsx  LoadingSpinner.tsx  Modal.tsx  PageHeader.tsx  Toast.tsx
KaraSalamFront/src/lib/: api.ts  auth.ts
KaraSalamFront/src/types/: index.ts
KaraSalamatBack/: Dockerfile  alembic.ini  database.py  main.py  models.py  pyproject.toml  seed_admin.py  test.db
KaraSalamatBack/alembic/: env.py
KaraSalamatBack/alembic/versions/: 053822965df0_initial_schema.py  618e54f61c7f_add_indexes_and_unique_constraints.py  d1e2f3a4b5c6_add_hse_data_table.py
KaraSalamatBack/routers/: authentication.py
KaraSalamatBack/tests/: conftest.py  test_authentication.py
