[project]
name = "karasalamatback"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "psycopg2-binary>=2.9.12",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.50",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "alembic>=1.13.0",
    "slowapi>=0.1.9",
    "pytest>=9.1.0",
    "iniconfig>=2.3.0",
    "pluggy>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
